--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     </properties>
     
     <repositories>
+	<repository>
+		<id>prime-repo</id>
+		<name>Prime Repo</name>
+		<url>http://repository.primefaces.org</url>
+	</repository>
+        
         <repository>
             <id>cmp-repo</id>
             <url>https://github.com/adrianohrl/cmp</url>
@@ -44,6 +50,12 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>6.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.10</version>
         </dependency>
         
         <dependency>
