--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,16 @@
         <param-value>/WEB-INF/faces-config.xml</param-value>
     </context-param>
     
+    <context-param>
+	<param-name>primefaces.THEME</param-name>
+	<param-value>#{parametersBean.theme}</param-value>
+    </context-param>
+    
+    <context-param>
+	<param-name>primefaces.FONT_AWESOME</param-name>
+	<param-value>true</param-value>
+    </context-param>
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
