--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tech.adrianohrl</groupId>
     <artifactId>stile-web</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1</version>
     <packaging>war</packaging>
 
     <name>stile-web</name>
@@ -24,7 +24,7 @@
 	</repository>
         
         <repository>
-            <id>cmp-mvn-repo</id>
+            <id>stile-mvn-repo</id>
             <url>https://raw.github.com/adrianohrl/stile/mvn-repo/</url>
             <snapshots>
                 <enabled>true</enabled>
