--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tech.adrianohrl</groupId>
     <artifactId>stile-web</artifactId>
-    <version>1.3.5</version>
+    <version>1.3.6</version>
     <packaging>war</packaging>
 
     <name>stile-web</name>
@@ -14,13 +14,14 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <hibernate.schema.skipped>true</hibernate.schema.skipped>
     </properties>
     
     <repositories>
 	<repository>
-		<id>prime-repo</id>
-		<name>Prime Repo</name>
-		<url>http://repository.primefaces.org</url>
+            <id>prime-repo</id>
+            <name>Prime Repo</name>
+            <url>http://repository.primefaces.org</url>
 	</repository>
         
         <repository>
@@ -116,6 +117,29 @@
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
                 </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>de.juplo</groupId>
+                <artifactId>hibernate4-maven-plugin</artifactId>
+                <version>1.0.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>export</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <skip>${hibernate.schema.skipped}</skip>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.hsqldb</groupId>
+                        <artifactId>hsqldb</artifactId>
+                        <version>2.2.8</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             
             <plugin>
